--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,19 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <version>5.7.0</version>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-engine</artifactId>
+    <version>5.7.0</version>
+    <scope>test</scope>
+</dependency>
+
     </dependencies>
 
     <properties>
